--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.8.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "sqlite3": "^5.1.7"
   }
